finished header and nav. working on aside and section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <h1>header</h1>
+    </header>
+
+    <nav>
+        <h1>nav</h1>
+    </nav>
+
+    <section>
+        <h1>section</h1>
+        <article>
+            <h1>article</h1>
+            <div>
+                <p>h1, h2, h3</p>
+            </div>
+
+            <div>
+                <p>p</p>
+            </div>
+
+        </article>
+    </section>
+    <aside>
+        <h1>aside</h1>
+    </aside>
+
 </body>
+
+<footer>
+    <h1>footer</h1>
+</footer>
+
 </html>
