added updated page with footer and aside completed

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Wirefram Homework (Easier)</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
+<div class="size">
 <body>
 
     <header>
@@ -16,29 +16,31 @@
     <nav>
         <h1>nav</h1>
     </nav>
+    <div class="container">
+        <section class="clearfix">
+            <h1>section</h1>
+            <article>
+                <h2>article</h2>
+                <div>
+                    <p>h1, h2, h3</p>
+                </div>
 
-    <section>
-        <h1>section</h1>
-        <article>
-            <h1>article</h1>
-            <div>
-                <p>h1, h2, h3</p>
-            </div>
+                <div>
+                    <p>p</p>
+                </div>
 
-            <div>
-                <p>p</p>
-            </div>
+            </article>
+        </section>
 
-        </article>
-    </section>
-    <aside>
-        <h1>aside</h1>
-    </aside>
+        <aside class="clearfix">
+            <h1>aside</h1>
+        </aside>
+    </div>
 
+    <footer>
+        <h1>footer</h1>
+    </footer>
+</div>
 </body>
-
-<footer>
-    <h1>footer</h1>
-</footer>
 
 </html>
