--- a/index.html
+++ b/index.html
@@ -7,39 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="size">
-<body>
 
-    <header>
-        <h1>header</h1>
-    </header>
+    <body>
 
-    <nav>
-        <h1>nav</h1>
-    </nav>
-    <div class="container">
-        <section class="clearfix">
-            <h1>section</h1>
-            <article>
-                <h2>article</h2>
-                <div>
-                    <p>h1, h2, h3</p>
-                </div>
+        <header>
+            <h1>header</h1>
+        </header>
 
-                <div>
-                    <p>p</p>
-                </div>
+        <nav>
+            <h1>nav</h1>
+        </nav>
+        <div class="container">
+            <section>
+                <h1>section</h1>
+                <article>
+                    <h1>article</h1>
+                    <div>
+                        <h1>h1, h2, h3</h1>
+                    </div>
 
-            </article>
-        </section>
+                    <div>
+                        <h1>p</h1>
+                    </div>
 
-        <aside class="clearfix">
-            <h1>aside</h1>
-        </aside>
-    </div>
+                </article>
+            </section>
 
-    <footer>
-        <h1>footer</h1>
-    </footer>
+            <aside>
+                <h1>aside</h1>
+            </aside>
+        </div>
+
+        <footer>
+            <h1>footer</h1>
+        </footer>
 </div>
 </body>
 
