finished first draft of easier homework

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <h1>nav</h1>
         </nav>
         <div class="container">
-            <section>
+            <section class="clearfix">
                 <h1>section</h1>
                 <article>
-                    <h1>article</h1>
-                    <div>
-                        <h1>h1, h2, h3</h1>
+                    <h3>article</h3>
+                    <div class="subarticle">
+                        <p> <strong>h1, h2, h3</strong></p>
                     </div>
 
                     <div>
-                        <h1>p</h1>
+                        <p>p</p>
                     </div>
 
                 </article>
@@ -36,11 +36,13 @@
             <aside>
                 <h1>aside</h1>
             </aside>
-        </div>
 
-        <footer>
-            <h1>footer</h1>
-        </footer>
+
+            <footer>
+                <h1>footer</h1>
+            </footer>
+
+        </div>
 </div>
 </body>
 
