--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Wirefram Homework (Easier)</title>
+    <title>Wireframes Homework (Easier)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <div class="size">
